[package]
name = "funclog"
authors = ["Yuichi Ishida <yu1guana@gmail.com>"]
version = "0.1.0"
description = "Attribute macros to print logs of entering and exiting functions, and changing of variables in functions into stderr."
repository = "https://github.com/yu1guana/proctrack-rs.git"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"

[features]
default = []
disable = []
under_proctrack = []
