[package]
name = "proctrack"
authors = ["Yuichi Ishida <yu1guana@gmail.com>"]
version = "0.1.0"
description = "Tool to make debugging Rust programs easier."
repository = "https://github.com/yu1guana/proctrack-rs.git"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.1", features = ["derive"]}
crossterm = "0.25.0"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
tui = "0.19.0"

funclog = {path = "../funclog", features = ["under_proctrack"]}
typename = {path = "../typename"}
typename_derive = {path = "../typename_derive", features = ["under_proctrack"]}

[features]
default = []
disable = ["funclog/disable"]
