[package]
name = "typename"
authors = ["Yuichi Ishida <yu1guana@gmail.com>"]
version = "0.1.0"
description = "Trait to get names of structs."
repository = "https://github.com/yu1guana/proctrack-rs.git"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
